@@ -128,17 +128,18 @@
     <build.path>build</build.path>
     <catalyst.version>1.2.1</catalyst.version>
     <glusterfs-hadoop.version>2.3.13</glusterfs-hadoop.version>
-    <grpc.version>1.37.0</grpc.version>
+    <grpc.version>1.54.1</grpc.version>
     <gson.version>2.8.9</gson.version>
-    <netty.version>4.1.52.Final</netty.version>
+    <netty.version>4.1.87.Final</netty.version>
     <rocksdb.version>7.0.3</rocksdb.version>
     <hadoop.version>3.3.1</hadoop.version>
     <jacoco.version>0.8.5</jacoco.version>
-    <java.version>1.11</java.version>
+    <java.version>11</java.version>
     <jaxb.version>2.3.3</jaxb.version>
     <jersey.version>2.34</jersey.version>
     <jetty.version>9.4.46.v20220331</jetty.version>
     <junit.version>4.13.1</junit.version>
+    <jupiter.version>5.9.2</jupiter.version>
     <log4j.version>2.17.1</log4j.version>
     <maven.version>3.8.6</maven.version>
     <metrics.version>4.1.11</metrics.version>
@@ -150,7 +151,7 @@
     <guava.version>31.0.1-jre</guava.version>
     <guice.version>5.1.0</guice.version>
     <parquet.version>1.11.0</parquet.version>
-    <protobuf.version>3.19.2</protobuf.version>
+    <protobuf.version>3.19.6</protobuf.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>1.7.30</slf4j.version>
     <jackson.version>2.13.3</jackson.version>
@@ -411,6 +412,11 @@
         <groupId>jakarta.ws.rs</groupId>
         <artifactId>jakarta.ws.rs-api</artifactId>
         <version>2.1.6</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
@@ -890,7 +896,7 @@
         <plugin>
           <groupId>com.mycila</groupId>
           <artifactId>license-maven-plugin</artifactId>
-          <version>4.0.rc1</version>
+          <version>4.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -917,6 +923,10 @@
             <maxmem>1024m</maxmem>
             <compilerArgs>
               <arg>-Xlint:none</arg>
+              <arg>--add-exports=java.base/jdk.internal.access=ALL-UNNAMED</arg>
+              <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
+              <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+              <arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
             </compilerArgs>
           </configuration>
         </plugin>
@@ -976,7 +986,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
           <configuration>
-            <argLine>@{argLine} -Djava.net.preferIPv4Stack=true</argLine>
+            <argLine>@{argLine} -Djava.net.preferIPv4Stack=true --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
             <excludesFile>${build.path}/surefire/${surefire.excludesFile}</excludesFile>
             <forkCount>${surefire.forkCount}</forkCount>
             <rerunFailingTestsCount>${surefire.rerunFailingTestsCount}</rerunFailingTestsCount>
@@ -1179,7 +1189,7 @@
             <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
           </sourceDirectories>
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
-          <excludes>**/org/apache/jsp/**,**/alluxio/concurrent/jsr/**,**/alluxio/jnifuse/**</excludes>
+          <excludes>**/org/apache/jsp/**,**/alluxio/jnifuse/**</excludes>
           <encoding>UTF-8</encoding>
           <consoleOutput>true</consoleOutput>
           <failsOnError>true</failsOnError>
@@ -1201,65 +1211,68 @@
         <groupId>com.mycila</groupId>
         <artifactId>license-maven-plugin</artifactId>
         <configuration>
-          <header>${build.path}/license/HEADER.txt</header>
-          <failIfMissing>true</failIfMissing>
           <aggregate>false</aggregate>
-          <excludes>
+          <failIfMissing>true</failIfMissing>
+          <licenseSets>
+            <licenseSet>
+              <header>${build.path}/license/HEADER.txt</header>
+              <excludes>
 
-            <!-- Code Exclusions -->
-            <exclude>**/src/main/java/alluxio/concurrent/jsr/**</exclude>
-            <exclude>**/src/main/resources/*</exclude>
-            <exclude>**/src/proto/**</exclude>
-            <exclude>**/src/deb/**/*</exclude>
-            <exclude>**/src/test/resources/**</exclude>
-            <exclude>**/\?/.java/**/*</exclude>
+                <!-- Code Exclusions -->
+                <exclude>**/src/main/resources/*</exclude>
+                <exclude>**/src/proto/**</exclude>
+                <exclude>**/src/deb/**/*</exclude>
+                <exclude>**/src/test/resources/**</exclude>
+                <exclude>**/\?/.java/**/*</exclude>
 
-            <!-- Build and Packaging Exclusions -->
-            <exclude>webui/node_modules/*</exclude>
-            <exclude>build/**/*</exclude>
-            <exclude>conf/alluxio-env.sh</exclude>
-            <exclude>conf/alluxio-site.properties</exclude>
-            <exclude>conf/masters</exclude>
-            <exclude>conf/tiered_identity.sh</exclude>
-            <exclude>conf/workers</exclude>
-            <exclude>dev/scripts/src/alluxio.org/go.mod</exclude>
-            <exclude>dev/scripts/src/alluxio.org/go.sum</exclude>
-            <exclude>dev/scripts/tarballs/**/*</exclude>
-            <exclude>dev/scripts/workdir/**/*</exclude>
-            <exclude>generated/**</exclude>
-            <exclude>**/.checkstyle</exclude>
-            <exclude>**/src/main/assembly/*</exclude>
-            <exclude>**/.idea/**</exclude>
-            <exclude>webui/**/.nvmrc</exclude>
-            <exclude>webui/**/*.svg</exclude>
-            <exclude>webui/**/.env*</exclude>
-            <exclude>webui/**/node/**</exclude>
-            <exclude>webui/**/node_modules/**</exclude>
-            <exclude>webui/**/src/**/*.css</exclude>
-            <exclude>webui/**/build/**</exclude>
+                <!-- Build and Packaging Exclusions -->
+                <exclude>webui/node_modules/*</exclude>
+                <exclude>build/**/*</exclude>
+                <exclude>conf/alluxio-env.sh</exclude>
+                <exclude>conf/alluxio-site.properties</exclude>
+                <exclude>conf/masters</exclude>
+                <exclude>conf/tiered_identity.sh</exclude>
+                <exclude>conf/workers</exclude>
+                <exclude>dev/scripts/src/alluxio.org/go.mod</exclude>
+                <exclude>dev/scripts/src/alluxio.org/go.sum</exclude>
+                <exclude>dev/scripts/tarballs/**/*</exclude>
+                <exclude>dev/scripts/workdir/**/*</exclude>
+                <exclude>generated/**</exclude>
+                <exclude>**/.checkstyle</exclude>
+                <exclude>**/src/main/assembly/*</exclude>
+                <exclude>**/.idea/**</exclude>
+                <exclude>webui/**/.nvmrc</exclude>
+                <exclude>webui/**/*.svg</exclude>
+                <exclude>webui/**/.env*</exclude>
+                <exclude>webui/**/node/**</exclude>
+                <exclude>webui/**/node_modules/**</exclude>
+                <exclude>webui/**/src/**/*.css</exclude>
+                <exclude>webui/**/build/**</exclude>
 
-            <!-- Documentation Exclusions -->
-            <exclude>docs/**/*</exclude>
-            <exclude>LICENSE</exclude>
-            <exclude>NOTICE</exclude>
-            <exclude>templates/*</exclude>
+                <!-- Documentation Exclusions -->
+                <exclude>docs/**/*</exclude>
+                <exclude>LICENSE</exclude>
+                <exclude>NOTICE</exclude>
+                <exclude>templates/*</exclude>
 
-            <!-- Default Local File System Exclusions -->
-            <exclude>logs/**/*</exclude>
-            <exclude>journal/**/*</exclude>
-            <exclude>metastore/**/*</exclude>
-            <exclude>underFSStorage/**/*</exclude>
-          </excludes>
+                <!-- Default Local File System Exclusions -->
+                <exclude>logs/**/*</exclude>
+                <exclude>journal/**/*</exclude>
+                <exclude>metastore/**/*</exclude>
+                <exclude>underFSStorage/**/*</exclude>
+              </excludes>
+            </licenseSet>
+          </licenseSets>
           <mapping>
             <alluxio>SCRIPT_STYLE</alluxio>
-            <go>SLASHSTAR_STYLE</go>
             <cc>SLASHSTAR_STYLE</cc>
+            <go>SLASHSTAR_STYLE</go>
             <h>SLASHSTAR_STYLE</h>
             <java>SLASHSTAR_STYLE</java>
-            <tsx>SLASHSTAR_STYLE</tsx>
-            <scss>SLASHSTAR_STYLE</scss>
             <properties.template>SCRIPT_STYLE</properties.template>
+            <scss>SLASHSTAR_STYLE</scss>
             <sh.template>SCRIPT_STYLE</sh.template>
+            <tsx>SLASHSTAR_STYLE</tsx>
             <workers>SCRIPT_STYLE</workers>
             <xml.template>XML_STYLE</xml.template>
           </mapping>
@@ -1343,44 +1356,6 @@
       <properties>
         <hadoop.version>3.3.1</hadoop.version>
       </properties>
-    </profile>
-
-    <!-- Requires hadoop.version to be 2.4.0 or later -->
-    <profile>
-      <id>java11</id>
-      <activation>
-        <jdk>11</jdk>
-      </activation>
-      <properties>
-        <java.version>1.8</java.version>
-      </properties>
-      <dependencyManagement>
-        <dependencies>
-          <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
-          </dependency>
-        </dependencies>
-      </dependencyManagement>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <configuration>
-              <source>11</source>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
 
     <!-- profile that Alluxio developers should use -->
